syntax = "proto3";
package admin_permission;
option go_package = "./admin_permission;admin_permission";
